--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -1,9 +1,13 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Encyclopedia
+    {{ title }}
 {% endblock %}
 
 {% block body %}
   {{ entry|safe }}
+
+  <form action="/edit/{{ title }}">
+    <button type="submit">Edit this page</button>
+  </form>
 {% endblock %}
