remove hard coded urls

--- a/encyclopedia/templates/encyclopedia/new.html
+++ b/encyclopedia/templates/encyclopedia/new.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-  <form action="/new" method="post">
+  <form action="{% url 'new' %}" method="post">
     {% csrf_token %}
     <h1>Enter title for the new topic</h1>
     <input type="text" class="title-input" name="title" placeholder="Title"></input><br>
