--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-  <form action="/edit/{{ title }}" method="post">
+  <form action="{% url 'edit' title %}" method="post">
     {% csrf_token %}
     <h1>Edit "{{ title }}"</h1>
     <p>Type entry in <a href="https://guides.github.com/features/mastering-markdown/">Markdown</a> format.</p>
