--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -7,5 +7,5 @@
 {% block body %}
   {{ entry|safe }}
 
-  <a href="/edit/{{ title }}">Edit this page</a>
+  <a href="{% url 'edit' title %}">Edit this page</a>
 {% endblock %}
