--- a/encyclopedia/templates/encyclopedia/results.html
+++ b/encyclopedia/templates/encyclopedia/results.html
@@ -10,7 +10,7 @@
     {% if entries|length > 0 %}
       <ul>
           {% for entry in entries %}
-              <li><a href="/wiki/{{ entry }}">{{ entry }}</a></li>
+              <li><a href="{% url 'wiki' entry %}">{{ entry }}</a></li>
           {% endfor %}
       </ul>
     {% else %}
