improve "no results" message

--- a/encyclopedia/templates/encyclopedia/results.html
+++ b/encyclopedia/templates/encyclopedia/results.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Search results</h1>
+    <h1>Search results for "{{ query }}"</h1>
 
     {% if entries|length > 0 %}
       <ul>
